--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -174,6 +174,7 @@
     "utility-types": "2.1.0",
     "which": "2.0.2",
     "write-json-file": "2.2.0",
-    "xdg-app-paths": "5.1.0"
+    "xdg-app-paths": "5.1.0",
+    "yarn": "^1.22.10"
   }
 }
